# giga

./: .gitignore  docker-compose.yml
.github/workflows/: checks.yml
app/: .prettierignore  .prettierrc  .prettierrc.json  .yarnrc.yml  README.md  package.json  tsconfig.base.json  tsconfig.json
app/apps/expo/: babel.config.js  metro.config.js
app/apps/expo/app/: _layout.tsx  index.tsx
app/apps/next/: .eslintrc.js  next.config.js  package.json  vercel.json
app/apps/next/app/: TamaguiProvider.tsx  layout.tsx  tamagui-provider.tsx
app/apps/next/pages/: _app.tsx  _document.tsx  index.tsx
app/apps/next/pages/login/: index.tsx
server/: .env  Cargo.toml  Dockerfile
server/migrations/: 20230515155604_users.sql  20230515160134_services.sql  20230517103545_users.sql
server/sql/: 20230515155604_users.sql  20230515160134_services.sql
server/src/: db.rs  env.rs  error.rs  lib.rs  main.rs
server/src/routes/: services.rs  users.rs
web/: package.json  turbo.json
web/apps/expo/: app.json  eas.json  metro.config.js  package.json
web/apps/expo/app/user/: [id].tsx
web/apps/next/: next.config.js  tamagui.config.ts  tsconfig.json
web/apps/next/pages/: _app.tsx  index.tsx
web/apps/next/pages/user/: [id].tsx
